--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tasks</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="./dom.css">
 </head>
 <body>
-    <script src="./index.js"></script>
+    <div class="container">
+        <div class="container1">
+    <h3 style="font-size: xxx-large; font-style: italic;">Add Your Details </h3>
+    <input type="text" placeholder=" USERNAME" id="username" class="foam-control"><br>
+    <input type="text" placeholder="ADDRESS" id="address" class="foam-control"><br>
+    <input type="text" placeholder="CITY" id="city" class="foam-control"><br>
+    <input type="text" placeholder="STATE"  id="state" class="foam-control"><br>
+    <input type="text" placeholder="PHONE NO" id="phoneno" class="foam-control"><br>
+    <button class="btn btn-success" onclick="addData()"> Submit Data</button>
+</div>
+<div class=" border-border2" id="container2"></div>
+</div>
+<script src="./dom.js"></script>
 </body>
 </html>
